[package]
name = "fnv_lib"
version = "0.10.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2021"
description = "Reading and writing sound_volume_fighter_num_table.fnv files"
repository = "https://github.com/jam1garner/smash-fnv"
license = "MIT"

[dependencies]
binrw = "0.11"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
